--- a/redes-sociais/estilos/botões.css
+++ b/redes-sociais/estilos/botões.css
@@ -1,2 +1,34 @@
 @charset "utf-8";
 
+* {
+    margin: 0%;
+    padding: 0%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+img {
+    width: 101vw;
+}
+
+::-webkit-scrollbar {
+    width: 0%;
+    height: 0%;
+}
+
+a {
+    display: block;
+    background-color: #26539a;
+    color: white;
+    text-decoration: none;
+    padding: 20px;
+    text-align: center;
+    font-weight: bolder;
+    transition: 300ms;
+}
+
+ a:hover {
+    display: block;
+    background: #2659ab;
+    border: 0.1px solid transparent;
+    box-sizing: border-box;
+}
