--- a/menu-drinks/estilo/style.css
+++ b/menu-drinks/estilo/style.css
@@ -43,13 +43,14 @@ header h1 span {
     padding: 10px;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.542);
     border-top-left-radius: 16px;
+    color: white;
 }
 
 section {
     box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.096);
-    margin: 0px auto;
+    margin: 0px auto 36px;
     text-align: center;
-    max-width: 700px;
+    max-width: 550px;
     display: flex;
     flex-wrap: wrap;
 }
