--- a/tabela-brasileirao/estilo/style.css
+++ b/tabela-brasileirao/estilo/style.css
@@ -12,6 +12,11 @@
 }
 
 body {
+    background-image: url(../imgs/fundo03.jpg);
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
     font-family: var(--font-1);
 }
 
@@ -34,9 +39,10 @@ li {
 .time{
     display: flex;
     flex: 2;
-    color: #333;
+    color: white;
     font-size: 18px;
     justify-content: center;
+    text-shadow: 2px 2px 5px black;
 }
 
 .time p {
@@ -72,12 +78,12 @@ li {
     border-bottom: 1px solid #ccc;
     width: 400px;
     margin: auto;
-    color: #111;
+    color: white;
     text-transform: uppercase;
 }
 
 span {
-    color: #555;
+    color: white;
     font-size: 11px;
     text-transform: uppercase;
 }
@@ -100,7 +106,8 @@ li p.info {
 }
 
 .x {
-    opacity: 0.3;
+    opacity: 0.7;
+    color: white;
 }
 
 section {
@@ -112,10 +119,12 @@ footer {
     text-align: center;
     opacity: 0.3;
     transition: 400ms;
+    color: white;
 }
 
 footer a {
     text-decoration: none;
+    color: white;
 }
 
 footer:hover {
