--- a/tabela-brasileirao/estilo/style.css
+++ b/tabela-brasileirao/estilo/style.css
@@ -1,5 +1,7 @@
 @charset "utf-8";
 
+/* confing geral */
+
 * {
     padding: 0;
     margin: 0;
@@ -20,47 +22,36 @@ body {
     font-family: var(--font-1);
 }
 
+span {
+    color: white;
+    font-size: 11px;
+    text-transform: uppercase;
+}
+
 h1,h2,h3,h4 {
     font-family: var(--font-2);
 }
 
-li {
-    list-style: none;
-    display: flex;
-    margin: auto;
-    width: 400px;
-    border-bottom: 1px solid #ccc;
-    justify-content: space-around;
-    text-align: center;
-    padding: 16px;
-    flex-wrap: wrap;
+section {
+    margin-bottom: 100px;
 }
 
-.time{
-    display: flex;
-    flex: 2;
+.data, .hora {
+    font-weight: bolder;
+}
+
+.logo {
+    width: 30px;
+    height: 30px;
+    margin: 0 10px;
+}
+
+.x {
+    opacity: 0.7;
     color: white;
-    font-size: 18px;
-    justify-content: center;
-    text-shadow: 2px 2px 5px black;
 }
 
-.time p {
-    flex: 1;
-    align-self: center;
-}
-
-.time img {
-    align-self: center;
-    flex: 2 1 1;
-}
-
-.placar {
-    display: flex;
-    align-items: center;
-    flex: 1;
-    justify-content: space-between;
-}
+/* cabeçalho */
 
 .topo h1 {
     width: 400px;
@@ -82,15 +73,18 @@ li {
     text-transform: uppercase;
 }
 
-span {
-    color: white;
-    font-size: 11px;
-    text-transform: uppercase;
-}
+/* conteudo principal */
 
-
-.data, .hora {
-    font-weight: bolder;
+li {
+    list-style: none;
+    display: flex;
+    margin: auto;
+    width: 400px;
+    border-bottom: 1px solid #ccc;
+    justify-content: space-around;
+    text-align: center;
+    padding: 16px;
+    flex-wrap: wrap;
 }
 
 li p.info {
@@ -99,20 +93,34 @@ li p.info {
     width: 400px;
 }
 
-.logo {
-    width: 30px;
-    height: 30px;
-    margin: 0 10px;
+.placar {
+    display: flex;
+    align-items: center;
+    flex: 1;
+    justify-content: space-between;
 }
 
-.x {
-    opacity: 0.7;
+.time{
+    display: flex;
+    flex: 2;
     color: white;
+    font-size: 18px;
+    justify-content: center;
+    text-shadow: 2px 2px 5px black;
 }
 
-section {
-    margin-bottom: 100px;
+.time p {
+    flex: 1;
+    align-self: center;
 }
+
+.time img {
+    align-self: center;
+    flex: 2 1 1;
+}
+
+
+/* rodapé */
 
 footer {
     padding: 5px;
