--- a/pomodoro-2.0/style.css
+++ b/pomodoro-2.0/style.css
@@ -20,16 +20,25 @@ body {
   display: grid;
 }
 
+body {
+  padding-top: 5.0rem;
+}
+
 #container{
   /* border: 2px solid red; */
   justify-self: center;
   align-self: center;
-  margin-top: -12rem;
+  margin-top: -17rem;
 
-  display: flex;
-  gap: 19.2rem;
+  display: grid;
+  gap: 10.2rem;
+}
 
-
+@media (min-width: 900px) {
+  #container {
+    display: flex;
+    gap: 16.2rem;
+  }
 }
 
 /* timer and controls config  */
@@ -87,3 +96,4 @@ body {
   background: #02799D;
   fill: white;
 }
+
