--- a/spa-universe/css/style.css
+++ b/spa-universe/css/style.css
@@ -4,6 +4,143 @@
   box-sizing: border-box;
 }
 
-body {
+:root {
+  --primary-color: #E1E1E6;
+}
 
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+.bg-home {
+  width: 100%;
+  height: 100%;
+
+  background: url(../imgs/mountains-universe-1\ 1\ \(2\).png);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+#home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  height: 40vh;
+  gap: 24px;
+
+  color: var(--primary-color);
+  border: 1px solid red;
+}
+
+#home h1 {
+  font-size: 48px;
+  font-weight: 700;
+}
+
+#home button {
+
+
+  padding: 12px 32px;
+
+  background: transparent;
+
+  border: 2px solid var(--primary-color);
+  color: var(--primary-color);
+
+  cursor: pointer;
+
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.universe-bg {
+  width: 100%;
+  height: 100%;
+
+  background: url(../imgs/mountains-universe-2.png);
+  background-size: 100vw 100vh;
+  background-repeat: no-repeat;
+  z-index: -1;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#universe {
+  color: white;
+}
+
+.explorer-bg {
+  width: 100%;
+  height: 100%;
+
+  background: url(../imgs/mountains-universe-3.png);
+  background-size: 100vw 100vh;
+  background-repeat: no-repeat;
+  z-index: -1;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#explorer {
+  color: white;
 }
