--- a/spa-universe/css/style.css
+++ b/spa-universe/css/style.css
@@ -31,6 +31,8 @@ nav {
   text-decoration: none;
 
   transition: .3s;
+
+  font-size: 24px;
 }
 
 .nav-links a:hover {
@@ -51,7 +53,7 @@ nav {
   width: 100%;
   height: 100%;
 
-  background: url(../imgs/mountains-universe-1\ 1\ \(2\).png);
+  background: url(../imgs/mountains-universe-1\ 1.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -60,6 +62,8 @@ nav {
   top: 0;
   left: 0;
   z-index: -1;
+
+  
 }
 
 #home {
@@ -195,4 +199,65 @@ nav {
   color: #C4C4CC;
   font-weight: 400;
   line-height: 160%;
+}
+
+
+/* ANIMATION */
+
+#home h1 {
+  animation: blinkdo 2s .3s backwards;
+}
+
+#home button {
+  animation: fromTop 1s .3s backwards;
+}
+
+#universe h1 {
+  animation: fromTop 1s .3s backwards;
+}
+
+#universe p {
+  animation: fromTop 1s .6s backwards;
+}
+
+#explorer h1 {
+  animation: fromTop 1s .3s backwards;
+}
+
+#explorer p {
+  animation: fromTop 1s .6s backwards;
+}
+
+@keyframes fromTop {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fromBottom {
+  from {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes blinkdo {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
