--- a/github-favorites/style.css
+++ b/github-favorites/style.css
@@ -24,10 +24,6 @@ body  {
   color: var(--text-color);
 }
 
-button {
-  background-color: var(--primary-color);
-}
-
 /* .sr-only é uma classe flexivel, que pode ser adicionada em diversos contexto para fazer com que o conteúdo desapareça, o usúario não irá ver o conteúdo mas o leitor de telas sim. */
 
 .sr-only {
@@ -52,5 +48,110 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  margin: 2.5rem 0;
 }
 
+header h1 {
+  font-size: 2rem;
+  text-transform: uppercase;
+}
+
+.search {
+  display: flex;
+  text-align: center;
+}
+
+#input-search{
+  height: 3.2rem;
+  border: 1px solid #ccc;
+  border-radius: .4rem 0 0 .4rem;
+  padding: 0 .8rem;
+}
+
+.button-plus {
+  height: 3.2rem;
+
+  border: none;
+  border-radius: 0 .4rem .4rem 0;
+  padding: 0 1rem;
+
+
+  background-color: var(--primary-color);
+
+  cursor: pointer;
+}
+
+.button-plus:hover {
+  filter: brightness(1.1);
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+
+  box-shadow: 0 1rem 2rem -1rem rgba(0,0,0,0.3);
+}
+
+table * {
+  font-size: 1.4rem;
+  color: var(--text-color);
+}
+
+table th {
+  background: var(--primary-color);
+  text-align: left;
+  font-weight: normal;
+  padding: 1.5rem;
+}
+
+table th:first-child {
+  border-top-left-radius: .4rem;
+}
+
+table th:last-child {
+  border-top-right-radius: .4rem;
+}
+
+
+table tr:nth-child(even) {
+  background: #eee;
+}
+
+table tr:nth-child(odd) {
+  background: #ddd;
+}
+
+td.user {
+  display: flex;
+  text-align: center;
+  gap: 1rem;
+}
+
+
+td.user img {
+  width: 5rem;
+  height: 5rem;
+  
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+td.user a p {
+  font-weight: bold;
+}
+
+td.user a {
+  text-decoration: none;
+  width: 100%;
+} 
+
+td .remove {
+  background: none;
+  border: none;
+}
+
+table td {
+  padding: 1.5rem;
+  text-align: left;
+}
